# kaka

./: .gitignore  AGENTS.md  LICENSE  PRODUCT.md  Package.swift  README.md  README.zh-CN.md  SECURITY.md
runtime-kit/: README.md  pyproject.toml
runtime-kit/hermes-plugin/: README.md  kaka-mobile-bridge.package.json
runtime-kit/hermes-skill/: SKILL.md
runtime-kit/kaka_mobile_runtime_kit/: __init__.py  cli.py  connection_qa.py  host_adapter.py  host_codex_developer_plugin_source.py  host_extension_install_package.py  host_extension_material_intake.py  host_extension_preview.py  host_extension_readiness.py  host_extension_starter_kit.py  host_plugin_skill_devkit.py  host_private_adapter_conformance.py  host_private_adapter_package.py  host_shell_pilot.py  host_shell_pilot_artifact_review.py  host_shell_pilot_evidence_manifest.py  host_shell_pilot_handoff.py  host_shell_pilot_preflight.py  host_shell_pilot_request.py  host_shell_pilot_runbook.py  image_intake.py  local_renderer_backend_capability_manifest.py  local_renderer_backend_readiness.py  local_tls_readiness.py  local_vision_heuristics.py  pairing.py  private_host_api.py  recall_export.py  recall_retrieval_material_intake.py  recall_retrieval_readiness.py  recall_search.py  retention_purge.py  runtime_store.py  vision_classification.py  vision_ocr.py  vision_server.py
runtime-kit/openclaw-skill/: SKILL.md  kaka-mobile-bridge.sidecar.json
runtime-kit/packaging/: HOST_PRIVATE_ADAPTER_IMPLEMENTATION.md  PACKAGING.md  host-adapter-action-result.schema.json  host-codex-developer-plugin-source.schema.json  (+29 more)
(+308 files in other folders)
