[project]
name = "kaka-mobile-runtime-kit"
version = "0.1.0"
description = "Explicit local launcher and adapter scaffold for Kaka Mobile Bridge runtimes."
requires-python = ">=3.11"

[project.scripts]
kaka-mobile-runtime-kit = "kaka_mobile_runtime_kit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
